api_versioned_docs/version-12.1.2.1/avalonia/controls/richtexteditor.mdx
---
title: 'RichTextEditor'
hide_title: true
slug: '/avalonia/controls/richtexteditor'
uid: 'Avalonia.Controls.RichTextEditor'
commentId: 'T:Avalonia.Controls.RichTextEditor'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.RichTextEditor'
assembly: 'Avalonia.Controls.RichTextEditor'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">RichTextEditor Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.RichTextEditor</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.RichTextEditor</code>
</div>
</div>

<div className="apiref-page__lead">

A rich text editor control that provides interactive editing capabilities for FlowDocument content.

</div>

<div className="apiref-page__signature">

```csharp
public class RichTextEditor
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="../avaloniaobject">AvaloniaObject</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../animation/animatable">Animatable</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../styledelement">StyledElement</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../visual">Visual</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../layout/layoutable">Layoutable</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../interactivity/interactive">Interactive</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../input/inputelement">InputElement</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="control">Control</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="primitives/templatedcontrol">TemplatedControl</a> <span className="apiref-page__relation-separator">-&gt;</span> RichTextEditor
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> IInteractiveTextHost, <a href="documents/primitives/itexteditorhost">ITextEditorHost</a>, ITextViewHost, l
</div>
</div>

## Remarks

[RichTextEditor](xref:Avalonia.Controls.RichTextEditor) is a full-featured text editing control that combines document rendering (TextViewBase)
with interactive editing capabilities (text selection, keyboard input, mouse input, etc.).

Implements [Avalonia.Controls.Documents.Primitives.ITextViewHost](xref:Avalonia.Controls.Documents.Primitives.ITextViewHost) for viewport/scrolling and [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)
for editing component abstraction.

## Constructors

| Name | Description |
| --- | --- |
| [RichTextEditor](#uid-f9a5d7442f) | Initializes a new instance of the [Avalonia.Controls.RichTextEditor](xref:Avalonia.Controls.RichTextEditor) control. |

<section className="apiref-page__member-entry">

<span id="uid-f9a5d7442f"></span>

### RichTextEditor Constructor

Initializes a new instance of the [Avalonia.Controls.RichTextEditor](xref:Avalonia.Controls.RichTextEditor) control.

```csharp
public RichTextEditor()
```

</section>

## Methods

| Name | Description |
| --- | --- |
| [ActivateDocument](#uid-618d7b27a0) | Makes `document` the document the editor edits: one of the body's page bands, or the body itself when null. A band's selection is created the first time the band is entered and kept while the band belongs to the document; the body's selection stays where it was. The caret moves to `position` when one is given, and the view brings the document's placement into view. Returns false for a document that is neither the body nor one of its bands. |
| [AddHandler (2 overloads)](../interactivity/interactive.mdx#uid-02518f5b3a) | Adds a handler for the specified routed event. Inherited from [Interactive](../interactivity/interactive.mdx). |
| [ApplyStyling](../styledelement.mdx#uid-b0f81a6f8f) | Applies styling to the control if the control is initialized and styling is not already applied. Inherited from [StyledElement](../styledelement.mdx). |
| [ApplyTemplate](primitives/templatedcontrol.mdx#uid-cc70dd4d2f) | Creates the visual children of the control, if necessary Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Arrange](../layout/layoutable.mdx#uid-d7a19ca8f7) | Arranges the control and its children. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [BeginInit](../styledelement.mdx#uid-91c6ccadce) | Inherited from [StyledElement](../styledelement.mdx). |
| [Bind (8 overloads)](../avaloniaobject.mdx#uid-1c60c7bda3) | Binds a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) to an [Avalonia.Data.BindingBase](xref:Avalonia.Data.BindingBase). Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [CheckAccess](../avaloniaobject.mdx#uid-260ff7a68d) | Returns a value indicating whether the current thread is the UI thread. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [ClearSelection](#uid-eb3d10454f) | Clears the current selection. |
| [ClearUndoHistory](#uid-613d301989) | Clears the undo and redo history. |
| [ClearValue (4 overloads)](../avaloniaobject.mdx#uid-41de208fbe) | Clears a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty)'s local value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [CoerceValue](../avaloniaobject.mdx#uid-3bec32f39e) | Coerces the specified [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty). Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [EndInit](../styledelement.mdx#uid-17b450469d) | Inherited from [StyledElement](../styledelement.mdx). |
| [Equals](../avaloniaobject.mdx#uid-a8a8e94305) | Compares two objects using reference equality. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Focus](../input/inputelement.mdx#uid-6b657af583) | Focuses the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [GetBaseValue](../avaloniaobject.mdx#uid-9c615efbba) | Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetComponent](#uid-3e1f8e046a) | No summary available. |
| [GetFlowDirection](../visual.mdx#uid-12716acd38) | Gets the value of the attached [Avalonia.Visual.FlowDirectionProperty](xref:Avalonia.Visual.FlowDirectionProperty) on a control. Inherited from [Visual](../visual.mdx). |
| [GetHashCode](../avaloniaobject.mdx#uid-7f7db1e7a2) | Gets the hash code for the object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetIsHoldingEnabled](../input/inputelement.mdx#uid-2af9987676) | Inherited from [InputElement](../input/inputelement.mdx). |
| [GetIsHoldWithMouseEnabled](../input/inputelement.mdx#uid-0420943ecd) | Inherited from [InputElement](../input/inputelement.mdx). |
| [GetIsTemplateFocusTarget](primitives/templatedcontrol.mdx#uid-75a788f38f) | Gets the value of the IsTemplateFocusTargetProperty attached property on a control. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [GetValue (3 overloads)](../avaloniaobject.mdx#uid-5142cd4792) | Gets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [InvalidateArrange](../layout/layoutable.mdx#uid-3e9d4ebe35) | Invalidates the arrangement of the control and queues a new layout pass. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [InvalidateMeasure](../layout/layoutable.mdx#uid-31c6107bb9) | Invalidates the measurement of the control and queues a new layout pass. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [InvalidateVisual](../visual.mdx#uid-1cd22a7496) | Invalidates the visual and queues a repaint. Inherited from [Visual](../visual.mdx). |
| [IsAnimating](../avaloniaobject.mdx#uid-8cbfc7521a) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is animating. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [IsSet](../avaloniaobject.mdx#uid-f8bf0bbdcc) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is set on this object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Load](#uid-160307dfa6) | Loads a document from a stream. |
| [LoadAsync](#uid-a2f3bfda3c) | Loads a document from a stream asynchronously. |
| [Measure](../layout/layoutable.mdx#uid-1da410eb81) | Carries out a measure of the control. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [RaiseEvent](../interactivity/interactive.mdx#uid-d6aba452e6) | Raises a routed event. Inherited from [Interactive](../interactivity/interactive.mdx). |
| [Redo](#uid-9d2baacffe) | Redoes the most recently undone editing operation. |
| [RegisterComponent](#uid-6b88ee2cd7) | No summary available. |
| [RemoveHandler (2 overloads)](../interactivity/interactive.mdx#uid-456e485be9) | Removes a handler for the specified routed event. Inherited from [Interactive](../interactivity/interactive.mdx). |
| [Render](../visual.mdx#uid-615917604b) | Renders the visual to a [Avalonia.Media.DrawingContext](xref:Avalonia.Media.DrawingContext). Inherited from [Visual](../visual.mdx). |
| [Save](#uid-b5907ac0b4) | Saves the document to a stream. |
| [SaveAsync](#uid-94926e59c4) | Saves the document to a stream asynchronously on a background thread. |
| [Select](#uid-f8717c4da1) | Sets the selection to the specified range. |
| [SelectAll](#uid-983aefc0ca) | Selects all text in the document. |
| [SetCurrentValue (2 overloads)](../avaloniaobject.mdx#uid-38759fd088) | Sets the value of a dependency property without changing its value source. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [SetFlowDirection](../visual.mdx#uid-a670b680eb) | Sets the value of the attached [Avalonia.Visual.FlowDirectionProperty](xref:Avalonia.Visual.FlowDirectionProperty) on a control. Inherited from [Visual](../visual.mdx). |
| [SetIsHoldingEnabled](../input/inputelement.mdx#uid-90a47948ad) | Inherited from [InputElement](../input/inputelement.mdx). |
| [SetIsHoldWithMouseEnabled](../input/inputelement.mdx#uid-a494efd7c7) | Inherited from [InputElement](../input/inputelement.mdx). |
| [SetIsTemplateFocusTarget](primitives/templatedcontrol.mdx#uid-281801c25f) | Sets the value of the IsTemplateFocusTargetProperty attached property on a control. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [SetValue (3 overloads)](../avaloniaobject.mdx#uid-47d14e19d7) | Sets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [TryGetResource](../styledelement.mdx#uid-2046a6b284) | Inherited from [StyledElement](../styledelement.mdx). |
| [Undo](#uid-6f1848c508) | Undoes the most recent editing operation. |
| [UnregisterComponent](#uid-0ef6d1a466) | No summary available. |
| [UpdateLayout](../layout/layoutable.mdx#uid-529d4a08ea) | Executes a layout pass. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [VerifyAccess](../avaloniaobject.mdx#uid-3b9d3c9793) | Checks that the current thread is the UI thread and throws if not. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-618d7b27a0"></span>

### ActivateDocument Method

Makes `document` the document the editor edits: one of the
body's page bands, or the body itself when null. A band's selection is
created the first time the band is entered and kept while the band belongs
to the document; the body's selection stays where it was. The caret moves to
`position` when one is given, and the view brings the
document's placement into view. Returns false for a document that is neither
the body nor one of its bands.

```csharp
public bool ActivateDocument(Avalonia.Controls.Documents.FlowDocument document, Avalonia.Controls.Documents.TextModel.TextPointer position)
```

#### Parameters

`document` Avalonia.Controls.Documents.FlowDocument


`position` Avalonia.Controls.Documents.TextModel.TextPointer


#### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-eb3d10454f"></span>

### ClearSelection Method

Clears the current selection.

```csharp
public void ClearSelection()
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-613d301989"></span>

### ClearUndoHistory Method

Clears the undo and redo history.

```csharp
public void ClearUndoHistory()
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3e1f8e046a"></span>

### GetComponent Method

```csharp
public T GetComponent<T>()
```

#### Type Parameters

`T`


#### Returns

T


</section>

<section className="apiref-page__member-entry">

<span id="uid-160307dfa6"></span>

### Load Method

Loads a document from a stream.

```csharp
public void Load(System.IO.Stream stream, Avalonia.Controls.Documents.Serialization.IDocumentSerializer serializer)
```

#### Parameters

`stream` System.IO.Stream

The stream to read from.


`serializer` Avalonia.Controls.Documents.Serialization.IDocumentSerializer

The serializer to use.


#### Remarks

Parses and builds the document on the calling thread. Prefer [Avalonia.Controls.RichTextEditor.LoadAsync(System.IO.Stream,Avalonia.Controls.Documents.Serialization.IDocumentSerializer,System.Threading.CancellationToken)](xref:Avalonia.Controls.RichTextEditor.LoadAsync%28System.IO.Stream%2CAvalonia.Controls.Documents.Serialization.IDocumentSerializer%2CSystem.Threading.CancellationToken%29)
for a large document, which keeps the parse off it.

#### Exceptions

- [\`stream\` is null.](xref:System.ArgumentNullException)
- [The stream content is invalid for the format.](xref:Avalonia.Controls.Documents.Serialization.SerializationException)

</section>

<section className="apiref-page__member-entry">

<span id="uid-a2f3bfda3c"></span>

### LoadAsync Method

Loads a document from a stream asynchronously.

```csharp
public System.Threading.Tasks.Task LoadAsync(System.IO.Stream stream, Avalonia.Controls.Documents.Serialization.IDocumentSerializer serializer, System.Threading.CancellationToken cancellationToken)
```

#### Parameters

`stream` System.IO.Stream

The stream to read from.


`serializer` Avalonia.Controls.Documents.Serialization.IDocumentSerializer

The serializer to use.


`cancellationToken` System.Threading.CancellationToken

Cancellation token.


#### Returns

System.Threading.Tasks.Task

A task that completes when the load is finished.


#### Remarks

This delegates to [Avalonia.Controls.Documents.FlowDocument.LoadAsync(System.IO.Stream,Avalonia.Controls.Documents.Serialization.IDocumentSerializer,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.FlowDocument.LoadAsync%28System.IO.Stream%2CAvalonia.Controls.Documents.Serialization.IDocumentSerializer%2CSystem.Threading.CancellationToken%29).

#### Exceptions

- [\`stream\` is null.](xref:System.ArgumentNullException)
- [The stream content is invalid for the format.](xref:Avalonia.Controls.Documents.Serialization.SerializationException)

</section>

<section className="apiref-page__member-entry">

<span id="uid-9d2baacffe"></span>

### Redo Method

Redoes the most recently undone editing operation.

```csharp
public void Redo()
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6b88ee2cd7"></span>

### RegisterComponent Method

```csharp
public void RegisterComponent(Avalonia.Controls.Documents.Primitives.Components.ITextViewComponent component)
```

#### Parameters

`component` Avalonia.Controls.Documents.Primitives.Components.ITextViewComponent


</section>

<section className="apiref-page__member-entry">

<span id="uid-b5907ac0b4"></span>

### Save Method

Saves the document to a stream.

```csharp
public void Save(System.IO.Stream stream, Avalonia.Controls.Documents.Serialization.IDocumentSerializer serializer)
```

#### Parameters

`stream` System.IO.Stream

The stream to write to.


`serializer` Avalonia.Controls.Documents.Serialization.IDocumentSerializer

The serializer to use.


#### Remarks

Writes on the calling thread. Prefer [Avalonia.Controls.RichTextEditor.SaveAsync(System.IO.Stream,Avalonia.Controls.Documents.Serialization.IDocumentSerializer,System.Threading.CancellationToken)](xref:Avalonia.Controls.RichTextEditor.SaveAsync%28System.IO.Stream%2CAvalonia.Controls.Documents.Serialization.IDocumentSerializer%2CSystem.Threading.CancellationToken%29) for a large document,
which keeps the write off it.

#### Exceptions

- [\`stream\` is null.](xref:System.ArgumentNullException)

</section>

<section className="apiref-page__member-entry">

<span id="uid-94926e59c4"></span>

### SaveAsync Method

Saves the document to a stream asynchronously on a background thread.

```csharp
public System.Threading.Tasks.Task SaveAsync(System.IO.Stream stream, Avalonia.Controls.Documents.Serialization.IDocumentSerializer serializer, System.Threading.CancellationToken cancellationToken)
```

#### Parameters

`stream` System.IO.Stream

The stream to write to.


`serializer` Avalonia.Controls.Documents.Serialization.IDocumentSerializer

The serializer to use.


`cancellationToken` System.Threading.CancellationToken

Cancellation token.


#### Returns

System.Threading.Tasks.Task

A task that completes when the save is finished.


#### Remarks

This is a convenience method that delegates to [Avalonia.Controls.Documents.FlowDocument.SaveAsync(System.IO.Stream,Avalonia.Controls.Documents.Serialization.IDocumentSerializer,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.FlowDocument.SaveAsync%28System.IO.Stream%2CAvalonia.Controls.Documents.Serialization.IDocumentSerializer%2CSystem.Threading.CancellationToken%29).

#### Exceptions

- [\`stream\` is null.](xref:System.ArgumentNullException)

</section>

<section className="apiref-page__member-entry">

<span id="uid-f8717c4da1"></span>

### Select Method

Sets the selection to the specified range.

```csharp
public void Select(Avalonia.Controls.Documents.TextModel.TextPointer start, Avalonia.Controls.Documents.TextModel.TextPointer end)
```

#### Parameters

`start` Avalonia.Controls.Documents.TextModel.TextPointer

The start position of the selection.


`end` Avalonia.Controls.Documents.TextModel.TextPointer

The end position of the selection.


</section>

<section className="apiref-page__member-entry">

<span id="uid-983aefc0ca"></span>

### SelectAll Method

Selects all text in the document.

```csharp
public void SelectAll()
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6f1848c508"></span>

### Undo Method

Undoes the most recent editing operation.

```csharp
public void Undo()
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-0ef6d1a466"></span>

### UnregisterComponent Method

```csharp
public void UnregisterComponent(Avalonia.Controls.Documents.Primitives.Components.ITextViewComponent component)
```

#### Parameters

`component` Avalonia.Controls.Documents.Primitives.Components.ITextViewComponent


</section>

## Properties

| Name | Description |
| --- | --- |
| [AcceptsReturn](#uid-6bf4631434) | Gets or sets a value indicating whether the editor accepts return key input. |
| [AcceptsTab](#uid-8b0541d626) | Gets or sets a value indicating whether the editor accepts tab key input. |
| [ActiveDocument](#uid-a60625a324) | Gets the nested document the caret is in: the page band whose text the selection edits, or null while the selection is in the body. |
| [ActualThemeVariant](../styledelement.mdx#uid-776bcbe4bf) | Gets the UI theme that is currently used by the element, which might be different than the RequestedThemeVariantProperty. Inherited from [StyledElement](../styledelement.mdx). |
| [AdornerLayer](#uid-5251199840) | Gets the adorner layer that renders highlights, block adorners, and interactive adorner controls. |
| [Background](primitives/templatedcontrol.mdx#uid-50dbd38ef5) | Gets or sets the brush used to draw the control's background. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BackgroundSizing](primitives/templatedcontrol.mdx#uid-07ef33f604) | Gets or sets how the control's background is drawn relative to the control's border. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BorderBrush](primitives/templatedcontrol.mdx#uid-cf666d3678) | Gets or sets the brush used to draw the control's border. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BorderThickness](primitives/templatedcontrol.mdx#uid-4e2cc431b4) | Gets or sets the thickness of the control's border. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Bounds](../visual.mdx#uid-a01c3022f7) | Gets the bounds of the control relative to its parent. Inherited from [Visual](../visual.mdx). |
| [CacheMode](../visual.mdx#uid-c565afad32) | Gets or sets the cache mode of the visual. Inherited from [Visual](../visual.mdx). |
| [CanRedo](#uid-825192594f) | Gets a value indicating whether there are operations that can be redone. |
| [CanUndo](#uid-a15faab03a) | Gets a value indicating whether there are operations that can be undone. |
| [CaretBrush](#uid-4b05394724) | Gets or sets the brush used to paint the caret. |
| [Classes](../styledelement.mdx#uid-b7b7edea05) | Gets or sets the styled element's classes. Inherited from [StyledElement](../styledelement.mdx). |
| [Clip](../visual.mdx#uid-7623faaeaf) | Gets or sets the geometry clip for this visual. Inherited from [Visual](../visual.mdx). |
| [ClipToBounds](../visual.mdx#uid-63c348aebd) | Gets or sets a value indicating whether the control should be clipped to its bounds. Inherited from [Visual](../visual.mdx). |
| [ContextFlyout](control.mdx#uid-3821ce41c2) | Gets or sets a context flyout to the control Inherited from [Control](control.mdx). |
| [ContextMenu](control.mdx#uid-95e5e3ccc3) | Gets or sets a context menu to the control. Inherited from [Control](control.mdx). |
| [CornerRadius](primitives/templatedcontrol.mdx#uid-91a447dd4a) | Gets or sets the radius of the border rounded corners. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Cursor](../input/inputelement.mdx#uid-4222de38cf) | Gets or sets associated mouse cursor. Inherited from [InputElement](../input/inputelement.mdx). |
| [DataContext](../styledelement.mdx#uid-647f924a56) | Gets or sets the control's data context. Inherited from [StyledElement](../styledelement.mdx). |
| [DataTemplates](control.mdx#uid-78ff251b26) | Gets or sets the data templates for the control. Inherited from [Control](control.mdx). |
| [DesiredSize](../layout/layoutable.mdx#uid-5eb61af32f) | Gets the size that this element computed during the measure pass of the layout process. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [Dispatcher](../avaloniaobject.mdx#uid-b25fa51632) | Returns the [Avalonia.AvaloniaObject.Dispatcher](xref:Avalonia.AvaloniaObject.Dispatcher) that this [Avalonia.AvaloniaObject](xref:Avalonia.AvaloniaObject) is associated with. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Document](#uid-e82778a425) | Gets or sets the FlowDocument to display and edit. |
| [Effect](../visual.mdx#uid-65e2be6b7c) | Gets or sets the effect of the control. Inherited from [Visual](../visual.mdx). |
| [FlowDirection](../visual.mdx#uid-c7929bde53) | Gets or sets the text flow direction. Inherited from [Visual](../visual.mdx). |
| [Focusable](../input/inputelement.mdx#uid-20168c45b2) | Gets or sets a value indicating whether the control can receive focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [FocusAdorner](control.mdx#uid-96de66ccc5) | Gets or sets the control's focus adorner. Inherited from [Control](control.mdx). |
| [FontFamily](primitives/templatedcontrol.mdx#uid-fc37661323) | Gets or sets the font family used to draw the control's text. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontFeatures](primitives/templatedcontrol.mdx#uid-1a7abb9411) | Gets or sets the font features turned on/off. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontSize](primitives/templatedcontrol.mdx#uid-0a8445793b) | Gets or sets the size of the control's text in points. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontStretch](primitives/templatedcontrol.mdx#uid-f23e3b5938) | Gets or sets the font stretch used to draw the control's text. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontStyle](primitives/templatedcontrol.mdx#uid-0d0ccbde51) | Gets or sets the font style used to draw the control's text. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontWeight](primitives/templatedcontrol.mdx#uid-967cc71125) | Gets or sets the font weight used to draw the control's text. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Foreground](primitives/templatedcontrol.mdx#uid-dff6480679) | Gets or sets the brush used to draw the control's text and other foreground elements. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [GestureRecognizers](../input/inputelement.mdx#uid-ddee464eee) | Inherited from [InputElement](../input/inputelement.mdx). |
| [HasMirrorTransform](../visual.mdx#uid-70dc13a730) | Gets or sets a value indicating whether to apply mirror transform on this control. Inherited from [Visual](../visual.mdx). |
| [Height](../layout/layoutable.mdx#uid-4334ab83b4) | Gets or sets the height of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [HighlightLayers](#uid-c0f0b39c02) | Gets the collection of highlight layers. |
| [HorizontalAlignment](../layout/layoutable.mdx#uid-c621d98d6c) | Gets or sets the element's preferred horizontal alignment in its parent. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [IsArrangeValid](../layout/layoutable.mdx#uid-97d1d86c71) | Gets a value indicating whether the control's layouts arrange is valid. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [IsEffectivelyEnabled](../input/inputelement.mdx#uid-48ba4c0379) | Gets a value indicating whether this control and all its parents are enabled. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsEffectivelyVisible](../visual.mdx#uid-03d6c15a63) | Gets a value indicating whether this control and all its parents are visible. Inherited from [Visual](../visual.mdx). |
| [IsEnabled](../input/inputelement.mdx#uid-31817dbbc9) | Gets or sets a value indicating whether the control is enabled for user interaction. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsFocused](../input/inputelement.mdx#uid-e4cd1a3717) | Gets a value indicating whether the control is focused. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsHitTestVisible](../input/inputelement.mdx#uid-11cb006f8b) | Gets or sets a value indicating whether the control is considered for hit testing. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsInitialized](../styledelement.mdx#uid-59a7cddacb) | Gets a value that indicates whether the element has finished initialization. Inherited from [StyledElement](../styledelement.mdx). |
| [IsKeyboardFocusWithin](../input/inputelement.mdx#uid-6e5855b185) | Gets a value indicating whether keyboard focus is anywhere within the element or its visual tree child elements. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsLoaded](control.mdx#uid-7b8aa52b02) | Gets a value indicating whether the control is fully constructed in the visual tree and both layout and render are complete. Inherited from [Control](control.mdx). |
| [IsMeasureValid](../layout/layoutable.mdx#uid-2b3ce6ad30) | Gets a value indicating whether the control's layout measure is valid. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [IsPointerOver](../input/inputelement.mdx#uid-09e1553c00) | Gets a value indicating whether the pointer is currently over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsReadOnly](#uid-b48e53809d) | Gets or sets a value indicating whether the editor is read-only. |
| [IsTabStop](../input/inputelement.mdx#uid-455d73fca4) | Gets or sets a value that indicates whether the control is included in tab navigation. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsVisible](../visual.mdx#uid-da2b0ca167) | Gets or sets a value indicating whether this control is visible. Inherited from [Visual](../visual.mdx). |
| [Item](../avaloniaobject.mdx#uid-c1d1f1bc0f) | Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [KeyBindings](../input/inputelement.mdx#uid-827a5420b2) | Inherited from [InputElement](../input/inputelement.mdx). |
| [LetterSpacing](primitives/templatedcontrol.mdx#uid-2d96a527e6) | Gets or sets the letter spacing for the control's text content. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Margin](../layout/layoutable.mdx#uid-3785e24bed) | Gets or sets the margin around the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MaxHeight](../layout/layoutable.mdx#uid-6ffe996277) | Gets or sets the maximum height of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MaxWidth](../layout/layoutable.mdx#uid-ea6041bc57) | Gets or sets the maximum width of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MinHeight](../layout/layoutable.mdx#uid-822cd64c83) | Gets or sets the minimum height of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MinWidth](../layout/layoutable.mdx#uid-5bd3b5bb2c) | Gets or sets the minimum width of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [Name](../styledelement.mdx#uid-245f4ccff5) | Gets or sets the name of the styled element. Inherited from [StyledElement](../styledelement.mdx). |
| [Opacity](../visual.mdx#uid-9eaf1e3d57) | Gets or sets the opacity of the control. Inherited from [Visual](../visual.mdx). |
| [OpacityMask](../visual.mdx#uid-b6579b9244) | Gets or sets the opacity mask of the control. Inherited from [Visual](../visual.mdx). |
| [Padding](primitives/templatedcontrol.mdx#uid-f5271cd58d) | Gets or sets the padding placed between the border of the control and its content. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [PageBandDistance](#uid-0c7f96ba44) | Gets or sets the distance from the sheet edge to a page band in [Avalonia.Controls.DocumentViewMode.PageLayout](xref:Avalonia.Controls.DocumentViewMode.PageLayout): the header's top sits this far below the sheet top, the footer's bottom this far above the sheet bottom (Word's header and footer distance). The document owns the value; this property is a handle on it, so setting it writes through and a document carrying its own distance is reflected here when it is attached. |
| [PageBandFocusBrush](#uid-db39755ba2) | Gets or sets the brush of the frame drawn around the page band the caret is in. |
| [PageBoundsBrush](#uid-82fbac4212) | Gets or sets the brush used to render the background of the page bounds area. |
| [PageGap](#uid-8b4a20a25f) | Gets or sets the vertical gap between page sheets in [Avalonia.Controls.DocumentViewMode.PageLayout](xref:Avalonia.Controls.DocumentViewMode.PageLayout). The same gap surrounds the sheet stack above the first and below the last page. |
| [PageMargins](#uid-c01c4002a9) | Gets or sets the page margins used in [Avalonia.Controls.DocumentViewMode.PageLayout](xref:Avalonia.Controls.DocumentViewMode.PageLayout). When null, the document's page padding is used, falling back to 2 cm on every side. |
| [PageSize](#uid-2d499141f0) | Gets or sets the page size used in [Avalonia.Controls.DocumentViewMode.PageLayout](xref:Avalonia.Controls.DocumentViewMode.PageLayout), in device-independent pixels. When null, the document's fixed page dimensions are used, falling back to A4 per dimension. |
| [Parent](../styledelement.mdx#uid-aad2c5c78d) | Gets the styled element's logical parent. Inherited from [StyledElement](../styledelement.mdx). |
| [RenderTransform](../visual.mdx#uid-7ee76ff32a) | Gets or sets the render transform of the control. Inherited from [Visual](../visual.mdx). |
| [RenderTransformOrigin](../visual.mdx#uid-3501120c25) | Gets or sets the transform origin of the control. Inherited from [Visual](../visual.mdx). |
| [Resources](../styledelement.mdx#uid-f6488ca4b7) | Gets or sets the styled element's resource dictionary. Inherited from [StyledElement](../styledelement.mdx). |
| [Selection](#uid-da09ccafad) | Gets the active selection: the body's, or the selection of the page band the caret is in (page layout). Toolbar state and formatting actions follow it. |
| [SelectionBrush](#uid-bb8d4b7f17) | Gets or sets the brush used for selection highlighting. |
| [SelectionFlyout](#uid-25aaaa9b36) | Gets or sets the selection mini-bar flyout shown when text is selected. |
| [ShowBlockAdorners](#uid-bffa575553) | Gets or sets whether block adorner decorations are visible. |
| [ShowPageBandsInContinuousLayout](#uid-753c8e21b6) | Gets or sets whether [Avalonia.Controls.DocumentViewMode.Continuous](xref:Avalonia.Controls.DocumentViewMode.Continuous) shows the document's running header above the body and its running footer below it, editable in place like the bands on the sheets. Off by default: the continuous view is a draft view, and the band commands switch to [Avalonia.Controls.DocumentViewMode.PageLayout](xref:Avalonia.Controls.DocumentViewMode.PageLayout) to edit a band, as Word switches to print layout. First-page and even-page bands and a section's own bands stay page-layout only, and a page-number field shows its cached result here. |
| [ShowPageBounds](#uid-5790aa237a) | Gets or sets whether page boundary indicators are rendered on the underlying [Avalonia.Controls.Documents.Primitives.InteractiveTextView](xref:Avalonia.Controls.Documents.Primitives.InteractiveTextView). |
| [ShowSelectionFlyout](#uid-7f5d53deb7) | Gets or sets whether the selection mini-bar flyout is shown when text is selected. |
| [ShowToolbar](#uid-2e74c114f1) | Gets or sets whether the toolbar is visible. |
| [StyleKey](../styledelement.mdx#uid-081584075e) | Gets the type by which the element is styled. Inherited from [StyledElement](../styledelement.mdx). |
| [Styles](../styledelement.mdx#uid-ae663139cc) | Gets the styles for the styled element. Inherited from [StyledElement](../styledelement.mdx). |
| [TabIndex](../input/inputelement.mdx#uid-82ec6bf9ac) | Gets or sets a value that determines the order in which elements receive focus when the user navigates through controls by pressing the Tab key. Inherited from [InputElement](../input/inputelement.mdx). |
| [Tag](control.mdx#uid-2790b0c958) | Gets or sets a user-defined object attached to the control. Inherited from [Control](control.mdx). |
| [Template](primitives/templatedcontrol.mdx#uid-7a289f7bd4) | Gets or sets the template that defines the control's appearance. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [TemplatedParent](../styledelement.mdx#uid-dbf6ddacc3) | Gets the styled element whose lookless template this styled element is part of. Inherited from [StyledElement](../styledelement.mdx). |
| [Theme](../styledelement.mdx#uid-1aebed283d) | Gets or sets the theme to be applied to the element. Inherited from [StyledElement](../styledelement.mdx). |
| [Toolbar](#uid-49c3746d84) | Gets or sets the custom toolbar for this editor. |
| [Transitions](../animation/animatable.mdx#uid-1b3138f517) | Gets or sets the property transitions for the control. Inherited from [Animatable](../animation/animatable.mdx). |
| [UndoLimit](#uid-e78274c7d9) | Gets or sets the maximum number of undo operations to retain. |
| [UndoManager](#uid-ec471b2074) | Gets the undo manager for this editor. |
| [UseLayoutRounding](../layout/layoutable.mdx#uid-5998a3d47c) | Gets or sets a value that determines whether the element should be snapped to pixel boundaries at layout time. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [VerticalAlignment](../layout/layoutable.mdx#uid-9652a1b295) | Gets or sets the element's preferred vertical alignment in its parent. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [ViewMode](#uid-5105223d8e) | Gets or sets how the editor lays out the document: [Avalonia.Controls.DocumentViewMode.Continuous](xref:Avalonia.Controls.DocumentViewMode.Continuous) (the default single column) or [Avalonia.Controls.DocumentViewMode.PageLayout](xref:Avalonia.Controls.DocumentViewMode.PageLayout) (discrete page sheets, Word's print layout). Switching swaps the hosted text view via the `:page-layout` pseudo-class; the document, selection, and editing stack carry over. |
| [Width](../layout/layoutable.mdx#uid-491c41475f) | Gets or sets the width of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [ZIndex](../visual.mdx#uid-a3275ade9d) | Gets or sets the Z index of the control. Inherited from [Visual](../visual.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-6bf4631434"></span>

### AcceptsReturn Property

Gets or sets a value indicating whether the editor accepts return key input.

```csharp
public bool AcceptsReturn { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8b0541d626"></span>

### AcceptsTab Property

Gets or sets a value indicating whether the editor accepts tab key input.

```csharp
public bool AcceptsTab { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a60625a324"></span>

### ActiveDocument Property

Gets the nested document the caret is in: the page band whose text the
selection edits, or null while the selection is in the body.

```csharp
public Avalonia.Controls.Documents.FlowDocument ActiveDocument { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-5251199840"></span>

### AdornerLayer Property

Gets the adorner layer that renders highlights, block adorners, and
interactive adorner controls.

```csharp
public Avalonia.Controls.Documents.Primitives.Adorners.BlockAdornerLayer AdornerLayer { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-825192594f"></span>

### CanRedo Property

Gets a value indicating whether there are operations that can be redone.

```csharp
public bool CanRedo { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a15faab03a"></span>

### CanUndo Property

Gets a value indicating whether there are operations that can be undone.

```csharp
public bool CanUndo { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-4b05394724"></span>

### CaretBrush Property

Gets or sets the brush used to paint the caret.

```csharp
public Avalonia.Media.IBrush CaretBrush { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e82778a425"></span>

### Document Property

Gets or sets the FlowDocument to display and edit.

```csharp
public Avalonia.Controls.Documents.FlowDocument Document { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c0f0b39c02"></span>

### HighlightLayers Property

Gets the collection of highlight layers.

```csharp
public Avalonia.Controls.Documents.Primitives.Highlighting.HighlightLayerCollection HighlightLayers { get; set; }
```

#### Remarks

This collection is created eagerly and is always non-null, so layers
can be added at any time — including before the visual template is applied.
Layers are rendered by the [Avalonia.Controls.Documents.Primitives.Adorners.BlockAdornerLayer](xref:Avalonia.Controls.Documents.Primitives.Adorners.BlockAdornerLayer) once it becomes available.

</section>

<section className="apiref-page__member-entry">

<span id="uid-b48e53809d"></span>

### IsReadOnly Property

Gets or sets a value indicating whether the editor is read-only.

```csharp
public bool IsReadOnly { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-0c7f96ba44"></span>

### PageBandDistance Property

Gets or sets the distance from the sheet edge to a page band in
[Avalonia.Controls.DocumentViewMode.PageLayout](xref:Avalonia.Controls.DocumentViewMode.PageLayout): the header's top sits this far
below the sheet top, the footer's bottom this far above the sheet bottom
(Word's header and footer distance). The document owns the value; this property
is a handle on it, so setting it writes through and a document carrying its own
distance is reflected here when it is attached.

```csharp
public double PageBandDistance { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-db39755ba2"></span>

### PageBandFocusBrush Property

Gets or sets the brush of the frame drawn around the page band the caret is in.

```csharp
public Avalonia.Media.IBrush PageBandFocusBrush { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-82fbac4212"></span>

### PageBoundsBrush Property

Gets or sets the brush used to render the background of the page bounds area.

```csharp
public Avalonia.Media.IBrush PageBoundsBrush { get; set; }
```

#### Remarks

Set this property to customize the appearance of the page bounds, such as changing
the background color or applying a pattern. If set to null, the default brush will be used.

</section>

<section className="apiref-page__member-entry">

<span id="uid-8b4a20a25f"></span>

### PageGap Property

Gets or sets the vertical gap between page sheets in
[Avalonia.Controls.DocumentViewMode.PageLayout](xref:Avalonia.Controls.DocumentViewMode.PageLayout). The same gap surrounds the sheet
stack above the first and below the last page.

```csharp
public double PageGap { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c01c4002a9"></span>

### PageMargins Property

Gets or sets the page margins used in
[Avalonia.Controls.DocumentViewMode.PageLayout](xref:Avalonia.Controls.DocumentViewMode.PageLayout). When null, the document's page
padding is used, falling back to 2 cm on every side.

```csharp
public Nullable<Avalonia.Thickness> PageMargins { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-2d499141f0"></span>

### PageSize Property

Gets or sets the page size used in [Avalonia.Controls.DocumentViewMode.PageLayout](xref:Avalonia.Controls.DocumentViewMode.PageLayout),
in device-independent pixels. When null, the document's fixed page dimensions
are used, falling back to A4 per dimension.

```csharp
public Nullable<Avalonia.Size> PageSize { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-da09ccafad"></span>

### Selection Property

Gets the active selection: the body's, or the selection of the page band the
caret is in (page layout). Toolbar state and formatting actions follow it.

```csharp
public Avalonia.Controls.TextSelection Selection { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-bb8d4b7f17"></span>

### SelectionBrush Property

Gets or sets the brush used for selection highlighting.

```csharp
public Avalonia.Media.IBrush SelectionBrush { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-25aaaa9b36"></span>

### SelectionFlyout Property

Gets or sets the selection mini-bar flyout shown when text is selected.

```csharp
public Avalonia.Controls.Documents.Primitives.EditorSelectionFlyout SelectionFlyout { get; set; }
```

#### Remarks

Set this property to customize the selection mini-bar layout and actions.
If null, no selection flyout is shown.

Use [Avalonia.Controls.RichTextEditor.ShowSelectionFlyout](xref:Avalonia.Controls.RichTextEditor.ShowSelectionFlyout) to hide the flyout without replacing it.

</section>

<section className="apiref-page__member-entry">

<span id="uid-bffa575553"></span>

### ShowBlockAdorners Property

Gets or sets whether block adorner decorations are visible.

```csharp
public bool ShowBlockAdorners { get; set; }
```

#### Remarks

Default is true. When true, registered [Avalonia.Controls.Documents.Primitives.Adorners.BlockAdorner](xref:Avalonia.Controls.Documents.Primitives.Adorners.BlockAdorner)
instances (e.g., dashed table borders) render over matching blocks.

</section>

<section className="apiref-page__member-entry">

<span id="uid-753c8e21b6"></span>

### ShowPageBandsInContinuousLayout Property

Gets or sets whether [Avalonia.Controls.DocumentViewMode.Continuous](xref:Avalonia.Controls.DocumentViewMode.Continuous) shows the
document's running header above the body and its running footer below it,
editable in place like the bands on the sheets. Off by default: the
continuous view is a draft view, and the band commands switch to
[Avalonia.Controls.DocumentViewMode.PageLayout](xref:Avalonia.Controls.DocumentViewMode.PageLayout) to edit a band, as Word switches to
print layout. First-page and even-page bands and a section's own bands stay
page-layout only, and a page-number field shows its cached result here.

```csharp
public bool ShowPageBandsInContinuousLayout { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-5790aa237a"></span>

### ShowPageBounds Property

Gets or sets whether page boundary indicators are rendered on the
underlying [Avalonia.Controls.Documents.Primitives.InteractiveTextView](xref:Avalonia.Controls.Documents.Primitives.InteractiveTextView).

```csharp
public bool ShowPageBounds { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-7f5d53deb7"></span>

### ShowSelectionFlyout Property

Gets or sets whether the selection mini-bar flyout is shown when text is selected.

```csharp
public bool ShowSelectionFlyout { get; set; }
```

#### Remarks

Default is true. Set to false to hide the selection flyout.

</section>

<section className="apiref-page__member-entry">

<span id="uid-2e74c114f1"></span>

### ShowToolbar Property

Gets or sets whether the toolbar is visible.

```csharp
public bool ShowToolbar { get; set; }
```

#### Remarks

Default is true. Set to false to hide the toolbar.

</section>

<section className="apiref-page__member-entry">

<span id="uid-49c3746d84"></span>

### Toolbar Property

Gets or sets the custom toolbar for this editor.

```csharp
public Avalonia.Controls.Documents.Primitives.Toolbar.EditorToolbar Toolbar { get; set; }
```

#### Remarks

Set this property to customize the toolbar layout and actions.
If null, the default toolbar is used.

Use [Avalonia.Controls.RichTextEditor.ShowToolbar](xref:Avalonia.Controls.RichTextEditor.ShowToolbar) to hide the toolbar entirely.

</section>

<section className="apiref-page__member-entry">

<span id="uid-e78274c7d9"></span>

### UndoLimit Property

Gets or sets the maximum number of undo operations to retain.

```csharp
public int UndoLimit { get; set; }
```

#### Remarks

Default value is 100. Setting this property will update the current
[Avalonia.Controls.RichTextEditor.UndoManager](xref:Avalonia.Controls.RichTextEditor.UndoManager) if one exists.

</section>

<section className="apiref-page__member-entry">

<span id="uid-ec471b2074"></span>

### UndoManager Property

Gets the undo manager for this editor.

```csharp
public Avalonia.Controls.Documents.Undo.IUndoManager UndoManager { get; set; }
```

#### Remarks

The [Avalonia.Controls.Documents.Undo.UndoManager](xref:Avalonia.Controls.Documents.Undo.UndoManager) is automatically created when a document is attached.
Use this property for advanced scenarios such as grouping operations with
[Avalonia.Controls.Documents.Undo.UndoManager.BeginUndoUnit(string,Nullable&#123;Avalonia.Controls.Documents.Undo.SelectionSnapshot&#125;)](xref:Avalonia.Controls.Documents.Undo.UndoManager.BeginUndoUnit%28System.String%2CSystem.Nullable%7BAvalonia.Controls.Documents.Undo.SelectionSnapshot%7D%29).

</section>

<section className="apiref-page__member-entry">

<span id="uid-5105223d8e"></span>

### ViewMode Property

Gets or sets how the editor lays out the document:
[Avalonia.Controls.DocumentViewMode.Continuous](xref:Avalonia.Controls.DocumentViewMode.Continuous) (the default single column) or
[Avalonia.Controls.DocumentViewMode.PageLayout](xref:Avalonia.Controls.DocumentViewMode.PageLayout) (discrete page sheets, Word's print
layout). Switching swaps the hosted text view via the `:page-layout`
pseudo-class; the document, selection, and editing stack carry over.

```csharp
public Avalonia.Controls.DocumentViewMode ViewMode { get; set; }
```

</section>

## Fields

| Name | Description |
| --- | --- |
| [AcceptsReturnProperty](#uid-6879333b2d) | Defines the [Avalonia.Controls.RichTextEditor.AcceptsReturn](xref:Avalonia.Controls.RichTextEditor.AcceptsReturn) property. |
| [AcceptsTabProperty](#uid-f9b342d93c) | Defines the [Avalonia.Controls.RichTextEditor.AcceptsTab](xref:Avalonia.Controls.RichTextEditor.AcceptsTab) property. |
| [BackgroundProperty](primitives/templatedcontrol.mdx#uid-dbbd1ffb9b) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Background](xref:Avalonia.Controls.Primitives.TemplatedControl.Background) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BackgroundSizingProperty](primitives/templatedcontrol.mdx#uid-316d7708c4) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.BackgroundSizing](xref:Avalonia.Controls.Primitives.TemplatedControl.BackgroundSizing) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BorderBrushProperty](primitives/templatedcontrol.mdx#uid-a4e6335f37) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.BorderBrush](xref:Avalonia.Controls.Primitives.TemplatedControl.BorderBrush) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BorderThicknessProperty](primitives/templatedcontrol.mdx#uid-c41e10c675) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.BorderThickness](xref:Avalonia.Controls.Primitives.TemplatedControl.BorderThickness) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BoundsProperty](../visual.mdx#uid-f22a27348f) | Defines the [Avalonia.Visual.Bounds](xref:Avalonia.Visual.Bounds) property. Inherited from [Visual](../visual.mdx). |
| [CacheModeProperty](../visual.mdx#uid-5c89b0f2fc) | Defines the [Avalonia.Visual.CacheMode](xref:Avalonia.Visual.CacheMode) property. Inherited from [Visual](../visual.mdx). |
| [CaretBrushProperty](#uid-a0e980610f) | Defines the [Avalonia.Controls.RichTextEditor.CaretBrush](xref:Avalonia.Controls.RichTextEditor.CaretBrush) property. |
| [ClipProperty](../visual.mdx#uid-06ffce3308) | Defines the [Avalonia.Visual.Clip](xref:Avalonia.Visual.Clip) property. Inherited from [Visual](../visual.mdx). |
| [ClipToBoundsProperty](../visual.mdx#uid-4bc41df166) | Defines the [Avalonia.Visual.ClipToBounds](xref:Avalonia.Visual.ClipToBounds) property. Inherited from [Visual](../visual.mdx). |
| [ContextCanceledEvent](../input/inputelement.mdx#uid-c58107fdb9) | Provides event data for the [Avalonia.Input.InputElement.ContextCanceled](xref:Avalonia.Input.InputElement.ContextCanceled) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ContextFlyoutProperty](control.mdx#uid-7adf3cc0e6) | Defines the [Avalonia.Controls.Control.ContextFlyout](xref:Avalonia.Controls.Control.ContextFlyout) property Inherited from [Control](control.mdx). |
| [ContextMenuProperty](control.mdx#uid-0fd2af59c9) | Defines the [Avalonia.Controls.Control.ContextMenu](xref:Avalonia.Controls.Control.ContextMenu) property. Inherited from [Control](control.mdx). |
| [ContextRequestedEvent](../input/inputelement.mdx#uid-11362fc1dd) | Provides event data for the [Avalonia.Input.InputElement.ContextRequested](xref:Avalonia.Input.InputElement.ContextRequested) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [CornerRadiusProperty](primitives/templatedcontrol.mdx#uid-c7cdbfc75d) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.CornerRadius](xref:Avalonia.Controls.Primitives.TemplatedControl.CornerRadius) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [CursorProperty](../input/inputelement.mdx#uid-37a51ae89c) | Gets or sets associated mouse cursor. Inherited from [InputElement](../input/inputelement.mdx). |
| [DataContextProperty](../styledelement.mdx#uid-7eefabb929) | Defines the [Avalonia.StyledElement.DataContext](xref:Avalonia.StyledElement.DataContext) property. Inherited from [StyledElement](../styledelement.mdx). |
| [DesiredSizeProperty](../layout/layoutable.mdx#uid-b46bed86fe) | Defines the [Avalonia.Layout.Layoutable.DesiredSize](xref:Avalonia.Layout.Layoutable.DesiredSize) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [DocumentProperty](#uid-9e94cf6760) | Defines the [Avalonia.Controls.RichTextEditor.Document](xref:Avalonia.Controls.RichTextEditor.Document) property. |
| [DoubleTappedEvent](../input/inputelement.mdx#uid-932047336f) | Defines the [Avalonia.Input.InputElement.DoubleTapped](xref:Avalonia.Input.InputElement.DoubleTapped) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [EffectProperty](../visual.mdx#uid-9374086bff) | Defines the [Avalonia.Visual.Effect](xref:Avalonia.Visual.Effect) property. Inherited from [Visual](../visual.mdx). |
| [FlowDirectionProperty](../visual.mdx#uid-79d00f257f) | Defines the [Avalonia.Visual.FlowDirection](xref:Avalonia.Visual.FlowDirection) property. Inherited from [Visual](../visual.mdx). |
| [FocusableProperty](../input/inputelement.mdx#uid-402835abd7) | Defines the [Avalonia.Input.InputElement.Focusable](xref:Avalonia.Input.InputElement.Focusable) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [FocusAdornerProperty](control.mdx#uid-701a7e7e23) | Defines the [Avalonia.Controls.Control.FocusAdorner](xref:Avalonia.Controls.Control.FocusAdorner) property. Inherited from [Control](control.mdx). |
| [FontFamilyProperty](primitives/templatedcontrol.mdx#uid-fefa977c48) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontFamily](xref:Avalonia.Controls.Primitives.TemplatedControl.FontFamily) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontFeaturesProperty](primitives/templatedcontrol.mdx#uid-54c52748f8) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontFeaturesProperty](xref:Avalonia.Controls.Primitives.TemplatedControl.FontFeaturesProperty) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontSizeProperty](primitives/templatedcontrol.mdx#uid-c06c71299f) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontSize](xref:Avalonia.Controls.Primitives.TemplatedControl.FontSize) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontStretchProperty](primitives/templatedcontrol.mdx#uid-d4a988cc8c) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontWeight](xref:Avalonia.Controls.Primitives.TemplatedControl.FontWeight) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontStyleProperty](primitives/templatedcontrol.mdx#uid-14162a470d) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontStyle](xref:Avalonia.Controls.Primitives.TemplatedControl.FontStyle) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontWeightProperty](primitives/templatedcontrol.mdx#uid-b911f20b9f) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontWeight](xref:Avalonia.Controls.Primitives.TemplatedControl.FontWeight) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [ForegroundProperty](primitives/templatedcontrol.mdx#uid-65cd93050b) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Foreground](xref:Avalonia.Controls.Primitives.TemplatedControl.Foreground) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [GettingFocusEvent](../input/inputelement.mdx#uid-23a6940484) | Defines the [Avalonia.Input.InputElement.GettingFocus](xref:Avalonia.Input.InputElement.GettingFocus) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [GotFocusEvent](../input/inputelement.mdx#uid-750ce32b53) | Defines the [Avalonia.Input.InputElement.GotFocus](xref:Avalonia.Input.InputElement.GotFocus) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [HasMirrorTransformProperty](../visual.mdx#uid-1f37ec4745) | Defines the [Avalonia.Visual.HasMirrorTransform](xref:Avalonia.Visual.HasMirrorTransform) property. Inherited from [Visual](../visual.mdx). |
| [HeightProperty](../layout/layoutable.mdx#uid-78fa90222f) | Defines the [Avalonia.Layout.Layoutable.Height](xref:Avalonia.Layout.Layoutable.Height) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [HoldingEvent](../input/inputelement.mdx#uid-b1eab1bcd8) | Defines the [Avalonia.Input.InputElement.Holding](xref:Avalonia.Input.InputElement.Holding) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [HorizontalAlignmentProperty](../layout/layoutable.mdx#uid-43606c2354) | Defines the [Avalonia.Layout.Layoutable.HorizontalAlignment](xref:Avalonia.Layout.Layoutable.HorizontalAlignment) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [IsEffectivelyEnabledProperty](../input/inputelement.mdx#uid-df18a2cff1) | Defines the [Avalonia.Input.InputElement.IsEffectivelyEnabled](xref:Avalonia.Input.InputElement.IsEffectivelyEnabled) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsEnabledProperty](../input/inputelement.mdx#uid-2f2893a804) | Defines the [Avalonia.Input.InputElement.IsEnabled](xref:Avalonia.Input.InputElement.IsEnabled) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsFocusedProperty](../input/inputelement.mdx#uid-ec811cc35b) | Defines the [Avalonia.Input.InputElement.IsFocused](xref:Avalonia.Input.InputElement.IsFocused) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsHitTestVisibleProperty](../input/inputelement.mdx#uid-e774aa17ad) | Defines the [Avalonia.Input.InputElement.IsHitTestVisible](xref:Avalonia.Input.InputElement.IsHitTestVisible) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsHoldingEnabledProperty](../input/inputelement.mdx#uid-a893be5e44) | Defines the IsHoldingEnabled attached property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsHoldWithMouseEnabledProperty](../input/inputelement.mdx#uid-3f460ccdfe) | Defines the IsHoldWithMouseEnabled attached property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsKeyboardFocusWithinProperty](../input/inputelement.mdx#uid-2dc1dd0d3d) | Defines the [Avalonia.Input.InputElement.IsKeyboardFocusWithin](xref:Avalonia.Input.InputElement.IsKeyboardFocusWithin) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsPointerOverProperty](../input/inputelement.mdx#uid-be6c8adde2) | Defines the [Avalonia.Input.InputElement.IsPointerOver](xref:Avalonia.Input.InputElement.IsPointerOver) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsReadOnlyProperty](#uid-7f836b5469) | Defines the [Avalonia.Controls.RichTextEditor.IsReadOnly](xref:Avalonia.Controls.RichTextEditor.IsReadOnly) property. |
| [IsTabStopProperty](../input/inputelement.mdx#uid-ed162e7441) | Defines the [Avalonia.Input.InputElement.IsTabStop](xref:Avalonia.Input.InputElement.IsTabStop) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsTemplateFocusTargetProperty](primitives/templatedcontrol.mdx#uid-e50dcff99d) | Defines the IsTemplateFocusTarget attached property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [IsVisibleProperty](../visual.mdx#uid-8e0edf21ac) | Defines the [Avalonia.Visual.IsVisible](xref:Avalonia.Visual.IsVisible) property. Inherited from [Visual](../visual.mdx). |
| [KeyDownEvent](../input/inputelement.mdx#uid-71dfb758e3) | Defines the [Avalonia.Input.InputElement.KeyDown](xref:Avalonia.Input.InputElement.KeyDown) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [KeyUpEvent](../input/inputelement.mdx#uid-e694f9abc6) | Defines the [Avalonia.Input.InputElement.KeyUp](xref:Avalonia.Input.InputElement.KeyUp) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [LetterSpacingProperty](primitives/templatedcontrol.mdx#uid-cd0904df0e) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.LetterSpacing](xref:Avalonia.Controls.Primitives.TemplatedControl.LetterSpacing) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [LoadedEvent](control.mdx#uid-f76afcf3e6) | Defines the [Avalonia.Controls.Control.Loaded](xref:Avalonia.Controls.Control.Loaded) event. Inherited from [Control](control.mdx). |
| [LosingFocusEvent](../input/inputelement.mdx#uid-6ed71d3568) | Defines the [Avalonia.Input.InputElement.LosingFocus](xref:Avalonia.Input.InputElement.LosingFocus) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [LostFocusEvent](../input/inputelement.mdx#uid-267344bb96) | Defines the [Avalonia.Input.InputElement.LostFocus](xref:Avalonia.Input.InputElement.LostFocus) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [MarginProperty](../layout/layoutable.mdx#uid-e730ad0d44) | Defines the [Avalonia.Layout.Layoutable.Margin](xref:Avalonia.Layout.Layoutable.Margin) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MaxHeightProperty](../layout/layoutable.mdx#uid-0a0a1f20cb) | Defines the [Avalonia.Layout.Layoutable.MaxHeight](xref:Avalonia.Layout.Layoutable.MaxHeight) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MaxWidthProperty](../layout/layoutable.mdx#uid-febdea8f4d) | Defines the [Avalonia.Layout.Layoutable.MaxWidth](xref:Avalonia.Layout.Layoutable.MaxWidth) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MinHeightProperty](../layout/layoutable.mdx#uid-f78bf9b812) | Defines the [Avalonia.Layout.Layoutable.MinHeight](xref:Avalonia.Layout.Layoutable.MinHeight) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MinWidthProperty](../layout/layoutable.mdx#uid-ec0935c392) | Defines the [Avalonia.Layout.Layoutable.MinWidth](xref:Avalonia.Layout.Layoutable.MinWidth) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [NameProperty](../styledelement.mdx#uid-bcdbb9de56) | Defines the [Avalonia.StyledElement.Name](xref:Avalonia.StyledElement.Name) property. Inherited from [StyledElement](../styledelement.mdx). |
| [OpacityMaskProperty](../visual.mdx#uid-aad2c3f7c2) | Defines the [Avalonia.Visual.OpacityMask](xref:Avalonia.Visual.OpacityMask) property. Inherited from [Visual](../visual.mdx). |
| [OpacityProperty](../visual.mdx#uid-2a53e27b1f) | Defines the [Avalonia.Visual.Opacity](xref:Avalonia.Visual.Opacity) property. Inherited from [Visual](../visual.mdx). |
| [PaddingProperty](primitives/templatedcontrol.mdx#uid-8836c61358) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Padding](xref:Avalonia.Controls.Primitives.TemplatedControl.Padding) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [PageBandDistanceProperty](#uid-079f227e38) | Defines the [Avalonia.Controls.RichTextEditor.PageBandDistance](xref:Avalonia.Controls.RichTextEditor.PageBandDistance) property. |
| [PageBandFocusBrushProperty](#uid-1d3384c467) | Defines the [Avalonia.Controls.RichTextEditor.PageBandFocusBrush](xref:Avalonia.Controls.RichTextEditor.PageBandFocusBrush) property. |
| [PageBoundsBrushProperty](#uid-3a4c7137b5) | Defines the [Avalonia.Controls.RichTextEditor.PageBoundsBrush](xref:Avalonia.Controls.RichTextEditor.PageBoundsBrush) property. |
| [PageGapProperty](#uid-3258b79c7b) | Defines the [Avalonia.Controls.RichTextEditor.PageGap](xref:Avalonia.Controls.RichTextEditor.PageGap) property. |
| [PageMarginsProperty](#uid-a2025ea8d6) | Defines the [Avalonia.Controls.RichTextEditor.PageMargins](xref:Avalonia.Controls.RichTextEditor.PageMargins) property. |
| [PageSizeProperty](#uid-b3834735fc) | Defines the [Avalonia.Controls.RichTextEditor.PageSize](xref:Avalonia.Controls.RichTextEditor.PageSize) property. |
| [ParentProperty](../styledelement.mdx#uid-dc6481a488) | Defines the [Avalonia.StyledElement.Parent](xref:Avalonia.StyledElement.Parent) property. Inherited from [StyledElement](../styledelement.mdx). |
| [PartScrollViewer](#uid-ec5e09ea5d) | The name of the template part holding the scroll viewer around the text view. |
| [PartTextView](#uid-fbbc371119) | The name of the template part holding the text view. |
| [PinchEndedEvent](../input/inputelement.mdx#uid-3f6a3485dd) | Defines the [Avalonia.Input.InputElement.PinchEnded](xref:Avalonia.Input.InputElement.PinchEnded) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PinchEvent](../input/inputelement.mdx#uid-d109d8c674) | Defines the [Avalonia.Input.InputElement.Pinch](xref:Avalonia.Input.InputElement.Pinch) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerCaptureLostEvent](../input/inputelement.mdx#uid-e76450a6b8) | Defines the [Avalonia.Input.InputElement.PointerCaptureLost](xref:Avalonia.Input.InputElement.PointerCaptureLost) routed event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerEnteredEvent](../input/inputelement.mdx#uid-ff4d54fcc4) | Defines the [Avalonia.Input.InputElement.PointerEntered](xref:Avalonia.Input.InputElement.PointerEntered) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerExitedEvent](../input/inputelement.mdx#uid-fc90c076e6) | Defines the [Avalonia.Input.InputElement.PointerExited](xref:Avalonia.Input.InputElement.PointerExited) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerMovedEvent](../input/inputelement.mdx#uid-559b3b80ee) | Defines the [Avalonia.Input.InputElement.PointerMoved](xref:Avalonia.Input.InputElement.PointerMoved) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerPressedEvent](../input/inputelement.mdx#uid-3b7a47d5fd) | Defines the [Avalonia.Input.InputElement.PointerPressed](xref:Avalonia.Input.InputElement.PointerPressed) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerReleasedEvent](../input/inputelement.mdx#uid-f5b0e74f53) | Defines the [Avalonia.Input.InputElement.PointerReleased](xref:Avalonia.Input.InputElement.PointerReleased) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureMagnifyEvent](../input/inputelement.mdx#uid-72785e777d) | Defines the [Avalonia.Input.InputElement.PointerTouchPadGestureMagnify](xref:Avalonia.Input.InputElement.PointerTouchPadGestureMagnify) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureRotateEvent](../input/inputelement.mdx#uid-409dcc6358) | Defines the [Avalonia.Input.InputElement.PointerTouchPadGestureRotate](xref:Avalonia.Input.InputElement.PointerTouchPadGestureRotate) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureSwipeEvent](../input/inputelement.mdx#uid-959da18351) | Defines the [Avalonia.Input.InputElement.PointerTouchPadGestureSwipe](xref:Avalonia.Input.InputElement.PointerTouchPadGestureSwipe) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerWheelChangedEvent](../input/inputelement.mdx#uid-dcb45add6a) | Defines the [Avalonia.Input.InputElement.PointerWheelChanged](xref:Avalonia.Input.InputElement.PointerWheelChanged) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PullGestureEndedEvent](../input/inputelement.mdx#uid-274f53878f) | Defines the [Avalonia.Input.InputElement.PullGestureEnded](xref:Avalonia.Input.InputElement.PullGestureEnded) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PullGestureEvent](../input/inputelement.mdx#uid-b9a60d43c7) | Defines the [Avalonia.Input.InputElement.PullGesture](xref:Avalonia.Input.InputElement.PullGesture) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [RenderTransformOriginProperty](../visual.mdx#uid-963d266cdd) | Defines the [Avalonia.Visual.RenderTransformOrigin](xref:Avalonia.Visual.RenderTransformOrigin) property. Inherited from [Visual](../visual.mdx). |
| [RenderTransformProperty](../visual.mdx#uid-31d20942c2) | Defines the [Avalonia.Visual.RenderTransform](xref:Avalonia.Visual.RenderTransform) property. Inherited from [Visual](../visual.mdx). |
| [RequestBringIntoViewEvent](control.mdx#uid-e52a870608) | Event raised when an element wishes to be scrolled into view. Inherited from [Control](control.mdx). |
| [RightTappedEvent](../input/inputelement.mdx#uid-a67d4b1367) | Defines the [Avalonia.Input.InputElement.RightTapped](xref:Avalonia.Input.InputElement.RightTapped) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureEndedEvent](../input/inputelement.mdx#uid-5f3e85c372) | Defines the [Avalonia.Input.InputElement.ScrollGestureEnded](xref:Avalonia.Input.InputElement.ScrollGestureEnded) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureEvent](../input/inputelement.mdx#uid-d098469113) | Defines the [Avalonia.Input.InputElement.ScrollGesture](xref:Avalonia.Input.InputElement.ScrollGesture) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureInertiaStartingEvent](../input/inputelement.mdx#uid-02f504d2ea) | Defines the [Avalonia.Input.InputElement.ScrollGestureInertiaStarting](xref:Avalonia.Input.InputElement.ScrollGestureInertiaStarting) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [SelectionBrushProperty](#uid-1d2437e024) | Defines the [Avalonia.Controls.RichTextEditor.SelectionBrush](xref:Avalonia.Controls.RichTextEditor.SelectionBrush) property. |
| [SelectionFlyoutProperty](#uid-354440eb04) | Defines the [Avalonia.Controls.RichTextEditor.SelectionFlyout](xref:Avalonia.Controls.RichTextEditor.SelectionFlyout) property. |
| [ShowBlockAdornersProperty](#uid-bb3687226c) | Defines the [Avalonia.Controls.RichTextEditor.ShowBlockAdorners](xref:Avalonia.Controls.RichTextEditor.ShowBlockAdorners) property. |
| [ShowPageBandsInContinuousLayoutProperty](#uid-ce5496035d) | Defines the [Avalonia.Controls.RichTextEditor.ShowPageBandsInContinuousLayout](xref:Avalonia.Controls.RichTextEditor.ShowPageBandsInContinuousLayout) property. |
| [ShowPageBoundsProperty](#uid-8ca0bfa67c) | Defines the [Avalonia.Controls.RichTextEditor.ShowPageBounds](xref:Avalonia.Controls.RichTextEditor.ShowPageBounds) property. |
| [ShowSelectionFlyoutProperty](#uid-71d86d70e7) | Defines the [Avalonia.Controls.RichTextEditor.ShowSelectionFlyout](xref:Avalonia.Controls.RichTextEditor.ShowSelectionFlyout) property. |
| [ShowToolbarProperty](#uid-5b028062bb) | Defines the [Avalonia.Controls.RichTextEditor.ShowToolbar](xref:Avalonia.Controls.RichTextEditor.ShowToolbar) property. |
| [SizeChangedEvent](control.mdx#uid-7d071894f4) | Defines the [Avalonia.Controls.Control.SizeChanged](xref:Avalonia.Controls.Control.SizeChanged) event. Inherited from [Control](control.mdx). |
| [SwipeGestureEndedEvent](../input/inputelement.mdx#uid-8492058651) | Defines the [Avalonia.Input.InputElement.SwipeGestureEnded](xref:Avalonia.Input.InputElement.SwipeGestureEnded) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [SwipeGestureEvent](../input/inputelement.mdx#uid-e431c01e95) | Defines the [Avalonia.Input.InputElement.SwipeGesture](xref:Avalonia.Input.InputElement.SwipeGesture) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [TabIndexProperty](../input/inputelement.mdx#uid-3708b5bfca) | Defines the [Avalonia.Input.InputElement.TabIndex](xref:Avalonia.Input.InputElement.TabIndex) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [TagProperty](control.mdx#uid-291b4a3b79) | Defines the [Avalonia.Controls.Control.Tag](xref:Avalonia.Controls.Control.Tag) property. Inherited from [Control](control.mdx). |
| [TappedEvent](../input/inputelement.mdx#uid-15efc26145) | Defines the [Avalonia.Input.InputElement.Tapped](xref:Avalonia.Input.InputElement.Tapped) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [TemplateAppliedEvent](primitives/templatedcontrol.mdx#uid-8ed6368102) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.TemplateApplied](xref:Avalonia.Controls.Primitives.TemplatedControl.TemplateApplied) routed event. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [TemplatedParentProperty](../styledelement.mdx#uid-a2c7149a6b) | Defines the [Avalonia.StyledElement.TemplatedParent](xref:Avalonia.StyledElement.TemplatedParent) property. Inherited from [StyledElement](../styledelement.mdx). |
| [TemplateProperty](primitives/templatedcontrol.mdx#uid-888470a301) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Template](xref:Avalonia.Controls.Primitives.TemplatedControl.Template) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [TextInputEvent](../input/inputelement.mdx#uid-b82dd03ac9) | Defines the [Avalonia.Input.InputElement.TextInput](xref:Avalonia.Input.InputElement.TextInput) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [TextInputMethodClientRequestedEvent](../input/inputelement.mdx#uid-679852bb37) | Defines the [Avalonia.Input.InputElement.TextInputMethodClientRequested](xref:Avalonia.Input.InputElement.TextInputMethodClientRequested) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ThemeProperty](../styledelement.mdx#uid-05852d7b9a) | Defines the [Avalonia.StyledElement.Theme](xref:Avalonia.StyledElement.Theme) property. Inherited from [StyledElement](../styledelement.mdx). |
| [ToolbarProperty](#uid-a51856368b) | Defines the [Avalonia.Controls.RichTextEditor.Toolbar](xref:Avalonia.Controls.RichTextEditor.Toolbar) property. |
| [TransitionsProperty](../animation/animatable.mdx#uid-c79f18fac2) | Defines the [Avalonia.Animation.Animatable.Transitions](xref:Avalonia.Animation.Animatable.Transitions) property. Inherited from [Animatable](../animation/animatable.mdx). |
| [UndoLimitProperty](#uid-b03bb9f4fa) | Defines the [Avalonia.Controls.RichTextEditor.UndoLimit](xref:Avalonia.Controls.RichTextEditor.UndoLimit) property. |
| [UnloadedEvent](control.mdx#uid-382a8f6733) | Defines the [Avalonia.Controls.Control.Unloaded](xref:Avalonia.Controls.Control.Unloaded) event. Inherited from [Control](control.mdx). |
| [UseLayoutRoundingProperty](../layout/layoutable.mdx#uid-e6d86b68b5) | Defines the [Avalonia.Layout.Layoutable.UseLayoutRounding](xref:Avalonia.Layout.Layoutable.UseLayoutRounding) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [VerticalAlignmentProperty](../layout/layoutable.mdx#uid-b50722555e) | Defines the [Avalonia.Layout.Layoutable.VerticalAlignment](xref:Avalonia.Layout.Layoutable.VerticalAlignment) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [ViewModeProperty](#uid-132d505cda) | Defines the [Avalonia.Controls.RichTextEditor.ViewMode](xref:Avalonia.Controls.RichTextEditor.ViewMode) property. |
| [VisualParentProperty](../visual.mdx#uid-12214f81b9) | Defines the [Avalonia.Visual.VisualParent](xref:Avalonia.Visual.VisualParent) property. Inherited from [Visual](../visual.mdx). |
| [WidthProperty](../layout/layoutable.mdx#uid-6f3212affd) | Defines the [Avalonia.Layout.Layoutable.Width](xref:Avalonia.Layout.Layoutable.Width) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [ZIndexProperty](../visual.mdx#uid-1dc9376c1e) | Defines the [Avalonia.Visual.ZIndex](xref:Avalonia.Visual.ZIndex) property. Inherited from [Visual](../visual.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-6879333b2d"></span>

### AcceptsReturnProperty Field

Defines the [Avalonia.Controls.RichTextEditor.AcceptsReturn](xref:Avalonia.Controls.RichTextEditor.AcceptsReturn) property.

```csharp
public Avalonia.StyledProperty<bool> AcceptsReturnProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-f9b342d93c"></span>

### AcceptsTabProperty Field

Defines the [Avalonia.Controls.RichTextEditor.AcceptsTab](xref:Avalonia.Controls.RichTextEditor.AcceptsTab) property.

```csharp
public Avalonia.StyledProperty<bool> AcceptsTabProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a0e980610f"></span>

### CaretBrushProperty Field

Defines the [Avalonia.Controls.RichTextEditor.CaretBrush](xref:Avalonia.Controls.RichTextEditor.CaretBrush) property.

```csharp
public Avalonia.StyledProperty<Avalonia.Media.IBrush> CaretBrushProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-9e94cf6760"></span>

### DocumentProperty Field

Defines the [Avalonia.Controls.RichTextEditor.Document](xref:Avalonia.Controls.RichTextEditor.Document) property.

```csharp
public Avalonia.StyledProperty<Avalonia.Controls.Documents.FlowDocument> DocumentProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-7f836b5469"></span>

### IsReadOnlyProperty Field

Defines the [Avalonia.Controls.RichTextEditor.IsReadOnly](xref:Avalonia.Controls.RichTextEditor.IsReadOnly) property.

```csharp
public Avalonia.StyledProperty<bool> IsReadOnlyProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-079f227e38"></span>

### PageBandDistanceProperty Field

Defines the [Avalonia.Controls.RichTextEditor.PageBandDistance](xref:Avalonia.Controls.RichTextEditor.PageBandDistance) property.

```csharp
public Avalonia.StyledProperty<double> PageBandDistanceProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-1d3384c467"></span>

### PageBandFocusBrushProperty Field

Defines the [Avalonia.Controls.RichTextEditor.PageBandFocusBrush](xref:Avalonia.Controls.RichTextEditor.PageBandFocusBrush) property.

```csharp
public Avalonia.StyledProperty<Avalonia.Media.IBrush> PageBandFocusBrushProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3a4c7137b5"></span>

### PageBoundsBrushProperty Field

Defines the [Avalonia.Controls.RichTextEditor.PageBoundsBrush](xref:Avalonia.Controls.RichTextEditor.PageBoundsBrush) property.

```csharp
public Avalonia.StyledProperty<Avalonia.Media.IBrush> PageBoundsBrushProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3258b79c7b"></span>

### PageGapProperty Field

Defines the [Avalonia.Controls.RichTextEditor.PageGap](xref:Avalonia.Controls.RichTextEditor.PageGap) property.

```csharp
public Avalonia.StyledProperty<double> PageGapProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a2025ea8d6"></span>

### PageMarginsProperty Field

Defines the [Avalonia.Controls.RichTextEditor.PageMargins](xref:Avalonia.Controls.RichTextEditor.PageMargins) property.

```csharp
public Avalonia.StyledProperty<Nullable<Avalonia.Thickness>> PageMarginsProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b3834735fc"></span>

### PageSizeProperty Field

Defines the [Avalonia.Controls.RichTextEditor.PageSize](xref:Avalonia.Controls.RichTextEditor.PageSize) property.

```csharp
public Avalonia.StyledProperty<Nullable<Avalonia.Size>> PageSizeProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ec5e09ea5d"></span>

### PartScrollViewer Field

The name of the template part holding the scroll viewer around the text view.

```csharp
public string PartScrollViewer
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-fbbc371119"></span>

### PartTextView Field

The name of the template part holding the text view.

```csharp
public string PartTextView
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-1d2437e024"></span>

### SelectionBrushProperty Field

Defines the [Avalonia.Controls.RichTextEditor.SelectionBrush](xref:Avalonia.Controls.RichTextEditor.SelectionBrush) property.

```csharp
public Avalonia.StyledProperty<Avalonia.Media.IBrush> SelectionBrushProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-354440eb04"></span>

### SelectionFlyoutProperty Field

Defines the [Avalonia.Controls.RichTextEditor.SelectionFlyout](xref:Avalonia.Controls.RichTextEditor.SelectionFlyout) property.

```csharp
public Avalonia.StyledProperty<Avalonia.Controls.Documents.Primitives.EditorSelectionFlyout> SelectionFlyoutProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-bb3687226c"></span>

### ShowBlockAdornersProperty Field

Defines the [Avalonia.Controls.RichTextEditor.ShowBlockAdorners](xref:Avalonia.Controls.RichTextEditor.ShowBlockAdorners) property.

```csharp
public Avalonia.StyledProperty<bool> ShowBlockAdornersProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ce5496035d"></span>

### ShowPageBandsInContinuousLayoutProperty Field

Defines the [Avalonia.Controls.RichTextEditor.ShowPageBandsInContinuousLayout](xref:Avalonia.Controls.RichTextEditor.ShowPageBandsInContinuousLayout) property.

```csharp
public Avalonia.StyledProperty<bool> ShowPageBandsInContinuousLayoutProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8ca0bfa67c"></span>

### ShowPageBoundsProperty Field

Defines the [Avalonia.Controls.RichTextEditor.ShowPageBounds](xref:Avalonia.Controls.RichTextEditor.ShowPageBounds) property.

```csharp
public Avalonia.StyledProperty<bool> ShowPageBoundsProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-71d86d70e7"></span>

### ShowSelectionFlyoutProperty Field

Defines the [Avalonia.Controls.RichTextEditor.ShowSelectionFlyout](xref:Avalonia.Controls.RichTextEditor.ShowSelectionFlyout) property.

```csharp
public Avalonia.StyledProperty<bool> ShowSelectionFlyoutProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-5b028062bb"></span>

### ShowToolbarProperty Field

Defines the [Avalonia.Controls.RichTextEditor.ShowToolbar](xref:Avalonia.Controls.RichTextEditor.ShowToolbar) property.

```csharp
public Avalonia.StyledProperty<bool> ShowToolbarProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a51856368b"></span>

### ToolbarProperty Field

Defines the [Avalonia.Controls.RichTextEditor.Toolbar](xref:Avalonia.Controls.RichTextEditor.Toolbar) property.

```csharp
public Avalonia.StyledProperty<Avalonia.Controls.Documents.Primitives.Toolbar.EditorToolbar> ToolbarProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b03bb9f4fa"></span>

### UndoLimitProperty Field

Defines the [Avalonia.Controls.RichTextEditor.UndoLimit](xref:Avalonia.Controls.RichTextEditor.UndoLimit) property.

```csharp
public Avalonia.StyledProperty<int> UndoLimitProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-132d505cda"></span>

### ViewModeProperty Field

Defines the [Avalonia.Controls.RichTextEditor.ViewMode](xref:Avalonia.Controls.RichTextEditor.ViewMode) property.

```csharp
public Avalonia.StyledProperty<Avalonia.Controls.DocumentViewMode> ViewModeProperty
```

</section>

## Events

| Name | Description |
| --- | --- |
| [ActiveDocumentChanged](#uid-0476254fdf) | Occurs when [Avalonia.Controls.RichTextEditor.ActiveDocument](xref:Avalonia.Controls.RichTextEditor.ActiveDocument) changes: the caret entered a page band or returned to the body. |
| [ActualThemeVariantChanged](../styledelement.mdx#uid-e69ef27e71) | Raised when the theme variant is changed on the element or an ancestor of the element. Inherited from [StyledElement](../styledelement.mdx). |
| [AttachedToLogicalTree](../styledelement.mdx#uid-717aa68e85) | Raised when the styled element is attached to a rooted logical tree. Inherited from [StyledElement](../styledelement.mdx). |
| [AttachedToVisualTree](../visual.mdx#uid-df40bddf6b) | Raised when the control is attached to a rooted visual tree. Inherited from [Visual](../visual.mdx). |
| [ContentChanged](#uid-02416e8976) | Occurs when the document content changes. |
| [ContextCanceled](../input/inputelement.mdx#uid-0132e74ca9) | Occurs when the context input gesture continues into another gesture, to notify the element that the context flyout should not be opened. Inherited from [InputElement](../input/inputelement.mdx). |
| [ContextRequested](../input/inputelement.mdx#uid-9067484d6e) | Occurs when the user has completed a context input gesture, such as a right-click. Inherited from [InputElement](../input/inputelement.mdx). |
| [DataContextChanged](../styledelement.mdx#uid-4b1cc873f8) | Occurs when the [Avalonia.StyledElement.DataContext](xref:Avalonia.StyledElement.DataContext) property changes. Inherited from [StyledElement](../styledelement.mdx). |
| [DetachedFromLogicalTree](../styledelement.mdx#uid-d9f5afa535) | Raised when the styled element is detached from a rooted logical tree. Inherited from [StyledElement](../styledelement.mdx). |
| [DetachedFromVisualTree](../visual.mdx#uid-3f64dafb1c) | Raised when the control is detached from a rooted visual tree. Inherited from [Visual](../visual.mdx). |
| [DocumentChanged](#uid-fbc6bf7a9a) | Occurs when the document is replaced. |
| [DoubleTapped](../input/inputelement.mdx#uid-ad13083e0c) | Occurs when the user briefly contacts and releases twice on a single point, without significant movement. Inherited from [InputElement](../input/inputelement.mdx). |
| [EffectiveViewportChanged](../layout/layoutable.mdx#uid-1922b89fa5) | Occurs when the element's effective viewport changes. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [GettingFocus](../input/inputelement.mdx#uid-4d054164ee) | Occurs before the control receives focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [GotFocus](../input/inputelement.mdx#uid-d41d7ad59c) | Occurs when the control receives focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [Holding](../input/inputelement.mdx#uid-8cda030fe2) | Occurs when the user makes a single contact, then maintains contact beyond a given time threshold without releasing or making another contact. Inherited from [InputElement](../input/inputelement.mdx). |
| [Initialized](../styledelement.mdx#uid-bd6a5e5c0e) | Occurs when the styled element has finished initialization. Inherited from [StyledElement](../styledelement.mdx). |
| [IsReadOnlyChanged](#uid-21986f9c51) | Occurs when the [Avalonia.Controls.RichTextEditor.IsReadOnly](xref:Avalonia.Controls.RichTextEditor.IsReadOnly) property changes. |
| [KeyDown](../input/inputelement.mdx#uid-ee9d987ed5) | Occurs when a key is pressed while the control has focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [KeyUp](../input/inputelement.mdx#uid-1131e95f55) | Occurs when a key is released while the control has focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [LayoutUpdated](../layout/layoutable.mdx#uid-05ea32f689) | Occurs when a layout pass completes for the control. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [Loaded](control.mdx#uid-c0a1ac2bc3) | Occurs when the control has been fully constructed in the visual tree and both layout and render are complete. Inherited from [Control](control.mdx). |
| [LosingFocus](../input/inputelement.mdx#uid-425fe24716) | Occurs before the control loses focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [LostFocus](../input/inputelement.mdx#uid-2061fc85a1) | Occurs when the control loses focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [Pinch](../input/inputelement.mdx#uid-96b68421dc) | Occurs when the user moves two contact points closer together. Inherited from [InputElement](../input/inputelement.mdx). |
| [PinchEnded](../input/inputelement.mdx#uid-50614bd917) | Occurs when the user releases both contact points used in a pinch gesture. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerCaptureLost](../input/inputelement.mdx#uid-2121c500a4) | Occurs when the control or its child control loses the pointer capture for any reason, event will not be triggered for a parent control if capture was transferred to another child of that parent control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerEntered](../input/inputelement.mdx#uid-a81f2c5c9a) | Occurs when the pointer enters the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerExited](../input/inputelement.mdx#uid-522e8d0a47) | Occurs when the pointer leaves the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerMoved](../input/inputelement.mdx#uid-0990295ea3) | Occurs when the pointer moves over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerPressed](../input/inputelement.mdx#uid-913cdc0df1) | Occurs when the pointer is pressed over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerReleased](../input/inputelement.mdx#uid-5b59b21d5e) | Occurs when the pointer is released over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureMagnify](../input/inputelement.mdx#uid-8f1fe6dc4a) | Occurs when the user moves two contact points away from each other on a touchpad. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureRotate](../input/inputelement.mdx#uid-d966c43661) | Occurs when the user places two contact points and moves them in a circular motion on a touchpad. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureSwipe](../input/inputelement.mdx#uid-9011c6de89) | Occurs when the user performs a rapid dragging motion in a single direction on a touchpad. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerWheelChanged](../input/inputelement.mdx#uid-6687ab6f2e) | Occurs when the mouse is scrolled over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PropertyChanged](../avaloniaobject.mdx#uid-d758e26fae) | Raised when a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value changes on this object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [PullGesture](../input/inputelement.mdx#uid-d85f52cac5) | Occurs when the user drags from the edge of a control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PullGestureEnded](../input/inputelement.mdx#uid-a37f51b846) | Occurs when the user releases the pointer after a pull gesture. Inherited from [InputElement](../input/inputelement.mdx). |
| [ResourcesChanged](../styledelement.mdx#uid-99a7f47c56) | Occurs when a resource in this styled element or a parent styled element has changed. Inherited from [StyledElement](../styledelement.mdx). |
| [RightTapped](../input/inputelement.mdx#uid-11a576692d) | Occurs when the user briefly contacts and releases a single point, without significant movement, using a mechanism on the input device recognized as a right button or equivalent. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGesture](../input/inputelement.mdx#uid-b571ab3acc) | Occurs when the user continuously moves the pointer in the same direction within the control’s boundaries. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureEnded](../input/inputelement.mdx#uid-eb3914c3a8) | Occurs when a scroll gesture has fully stopped, taking into account any inertial movement that continues the scroll after the user has released the pointer. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureInertiaStarting](../input/inputelement.mdx#uid-c8cd2731a5) | Occurs within a scroll gesture, when the user releases the pointer, and scrolling continues by transitioning to momentum-based gliding movement. Inherited from [InputElement](../input/inputelement.mdx). |
| [SelectionChanged](#uid-a262362f2c) | Occurs when the selection changes. |
| [SizeChanged](control.mdx#uid-6cfea6b6c5) | Occurs when the bounds (actual size) of the control have changed. Inherited from [Control](control.mdx). |
| [SwipeGesture](../input/inputelement.mdx#uid-0f4fc613ec) | Occurs when the user rapidly drags the pointer in a single direction across the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [SwipeGestureEnded](../input/inputelement.mdx#uid-137ae2fd9d) | Occurs when a swipe gesture ends on the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [Tapped](../input/inputelement.mdx#uid-6df36c079d) | Occurs when the user briefly contacts and releases a single point, without significant movement. Inherited from [InputElement](../input/inputelement.mdx). |
| [TemplateApplied](primitives/templatedcontrol.mdx#uid-d353f79b7c) | Raised when the control's template is applied. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [TextInput](../input/inputelement.mdx#uid-6dcb8fae07) | Occurs when a user typed some text while the control has focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [TextInputMethodClientRequested](../input/inputelement.mdx#uid-5d96b89080) | Occurs when an input element gains input focus and input method is looking for the corresponding client Inherited from [InputElement](../input/inputelement.mdx). |
| [Unloaded](control.mdx#uid-fdfd878e56) | Occurs when the control is removed from the visual tree. Inherited from [Control](control.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-0476254fdf"></span>

### ActiveDocumentChanged Event

Occurs when [Avalonia.Controls.RichTextEditor.ActiveDocument](xref:Avalonia.Controls.RichTextEditor.ActiveDocument) changes: the caret entered a page
band or returned to the body.

```csharp
public event EventHandler ActiveDocumentChanged
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-02416e8976"></span>

### ContentChanged Event

Occurs when the document content changes.

```csharp
public event EventHandler ContentChanged
```

#### Remarks

This event fires once per logical editing operation, not for each
individual character. Batch operations trigger a single event.

The event is only raised when the document was actually modified;
no-op change blocks (opened without edits) are suppressed.

</section>

<section className="apiref-page__member-entry">

<span id="uid-fbc6bf7a9a"></span>

### DocumentChanged Event

Occurs when the document is replaced.

```csharp
public event EventHandler DocumentChanged
```

#### Remarks

This event fires when the [Avalonia.Controls.RichTextEditor.Document](xref:Avalonia.Controls.RichTextEditor.Document) property changes.

</section>

<section className="apiref-page__member-entry">

<span id="uid-21986f9c51"></span>

### IsReadOnlyChanged Event

Occurs when the [Avalonia.Controls.RichTextEditor.IsReadOnly](xref:Avalonia.Controls.RichTextEditor.IsReadOnly) property changes.

```csharp
public event EventHandler IsReadOnlyChanged
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a262362f2c"></span>

### SelectionChanged Event

Occurs when the selection changes.

```csharp
public event EventHandler SelectionChanged
```

#### Remarks

This event fires when the caret moves or the selection extent changes.

</section>

</ApiRefPage>

